--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -52,6 +52,7 @@ main {
   align-items: center;
   flex-direction: column;
   padding: 30px 0;
+  border-bottom: 1px solid #000;
 }
 
 .container header h2 {
@@ -96,12 +97,45 @@ main {
   display: flex;  
   flex-wrap: wrap;
   align-items: center;
+  border-bottom: 1px solid #000;
 }
 
 .container .profile-data .info .data{
   padding: 40px;
   width: 50%;
 }
+
+.container .profile-data .info .follow{
+  width: 100%;
+  padding: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.container .profile-data .info .follow i{
+  font-size: 13px;
+  margin-bottom: 20px;
+}
+
+.container .profile-data .info .follow p{
+  font-size: 13px;
+  font-weight: 600;
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  margin-bottom: 5px;
+  color: #fff;
+}
+
+.container .profile-data .info .follow .followers p{
+  background-color: rgb(253, 78, 107);
+}
+
+.container .profile-data .info .follow .following p{
+  background-color: purple;
+}
+
 
 .container .profile-data .info img{
   width: 50%;
@@ -123,6 +157,10 @@ main {
 
 /* REPOSITORIES */
 
+.container .profile-data .repositories {
+  border-bottom: 1px solid black;
+}
+
 .container .profile-data .repositories h2{
   margin-bottom: 30px;
   text-align: center;
@@ -143,9 +181,31 @@ main {
   transition: 0.3s ease-in-out;
 }
 
+.container .profile-data .repositories ul li a i{
+  padding: 5px;
+}
+
 .container .profile-data .repositories ul li a:hover{
   background-color:hotpink;
   color: #fff
+}
+
+
+/* ACTIVITIES */
+
+.container .profile-data .activities h2{
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.container .profile-data .activities ul{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.container .profile-data .activities ul li p span{
+  font-weight: 700;
 }
 
 .container .profile-data.hide{
