--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -191,20 +191,20 @@ main {
 }
 
 
-/* ACTIVITIES */
+/* EVENTS */
 
-.container .profile-data .activities h2{
+.container .profile-data .events h2{
   margin-bottom: 30px;
   text-align: center;
 }
 
-.container .profile-data .activities ul{
+.container .profile-data .events ul{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
-.container .profile-data .activities ul li p span{
+.container .profile-data .events ul li p span{
   font-weight: 700;
 }
 
